--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -45,7 +45,10 @@ nav ul {
   display: flex;
   gap: 1rem;
 }
-
+figure {
+  margin: 0;
+  padding: 0;
+}
 footer {
   height: 20rem;
   display: flex;
@@ -90,6 +93,22 @@ footer {
   padding: 1.5rem;
   border-radius: 1rem;
 }
+.container__links ul {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 1rem;
+  column-gap: 2rem;
+}
+
+.container__links li {
+  width: fit-content;
+  white-space: nowrap;
+  padding: 0.3rem 0.6rem;
+}
+
+.container__links a:hover {
+  color: orangered;
+}
 
 /* specific classes -------------------------------------------- */
 .list-hobbies {
@@ -103,7 +122,7 @@ footer {
   padding: 0.1rem 0.6rem;
   border-radius: 0.3rem;
   width: max-content;
-  background-color: rgba(55, 55, 55, 0.444);
+  background-color: rgba(55, 55, 55, 0.158);
 }
 .social-item {
   display: flex;
@@ -123,6 +142,25 @@ footer {
 .svg-social {
   width: 3rem;
   height: 3rem;
+}
+
+.gallery-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.gallery-wrapper img {
+  max-width: 100%;
+  height: auto;
+}
+
+.list-links li {
+  border: 1px solid rgba(64, 224, 208, 0.272);
+  border-radius: 0.3rem;
+  width: max-content;
+  background-color: rgba(55, 55, 55, 0.158);
 }
 
 /* Tablet & Moblie --------------------------------------------- */
