--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -45,10 +45,13 @@ body {
   font-weight: 300;
   background-color: rgb(27, 39, 39);
   color: aliceblue;
-  padding: 0 4rem 0 4rem;
   width: auto;
   max-width: 90rem; /* 1440 px */
   margin: auto;
+}
+main,
+header {
+  padding: 0 4rem 0 4rem;
 }
 h1,
 h2,
@@ -187,9 +190,11 @@ figcaption {
   padding: 1.6rem 1.6rem;
   border-radius: 0.3rem;
 }
-.social-item a:hover {
+
+.social-item > a:hover > :first-child:not(:last-child) {
   filter: hue-rotate(0deg) saturate(10000%);
 }
+
 .social-item p {
   border-top: 2px solid orangered;
   width: min-content;
@@ -206,6 +211,7 @@ figcaption {
   width: 100%;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 2rem;
 }
 
@@ -227,5 +233,12 @@ figcaption {
   .container__top {
     display: flex;
     flex-direction: column-reverse;
+  }
+  main,
+  header {
+    padding: 0 2rem 0 2rem;
+  }
+  .container__social .social-item {
+    width: 100%;
   }
 }
