--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -39,6 +39,13 @@
   src: url("../fonts/rubik-v26-latin-800.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
+/* variables */
+:root {
+  --main-layout-widh: 90rem;
+  --main-layout-padding-desktop: 4rem;
+  --main-gallery-gap-desktop: 2rem;
+}
+
 /* general classes  -------------------------------------------- */
 body {
   font-family: "Rubik", sans-serif;
@@ -194,6 +201,9 @@ figcaption {
 .social-item > a:hover > :first-child:not(:last-child) {
   filter: hue-rotate(0deg) saturate(10000%);
 }
+.social-item > a:hover > :last-child {
+  filter: saturate(0) brightness(300%);
+}
 
 .social-item p {
   border-top: 2px solid orangered;
@@ -212,7 +222,17 @@ figcaption {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 2rem;
+  gap: var(--main-gallery-gap-desktop);
+  justify-content: center;
+}
+
+.gallery-item {
+  flex-basis: calc(
+    (
+        var(--main-layout-widh) - (2 * var(--main-layout-padding-desktop)) -
+          (2 * var(--main-gallery-gap-desktop))
+      ) / 3
+  );
 }
 
 .gallery-wrapper img {
@@ -233,6 +253,7 @@ figcaption {
   .container__top {
     display: flex;
     flex-direction: column-reverse;
+    align-items: start;
   }
   main,
   header {
@@ -240,5 +261,8 @@ figcaption {
   }
   .container__social .social-item {
     width: 100%;
+  }
+  .gallery-item {
+    flex-basis: max-content;
   }
 }
