--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,11 @@ footer {
   padding: 0 var(--main-layout-padding-desktop) 0
     var(--main-layout-padding-desktop);
 }
+
+figcaption {
+  margin-top: 1rem;
+}
+
 h1,
 h2,
 h3,
@@ -70,51 +75,62 @@ h5,
 h6 {
   font-weight: 200;
 }
+
 h1 {
   font-size: 2.5rem;
 }
+
 h2 {
   font-weight: 500;
   margin-top: 4rem;
   font-size: 1.8rem;
 }
+
 h3 {
   font-weight: 500;
   font-size: 1.3rem;
   letter-spacing: 0.05rem;
 }
+
 h4 {
   text-transform: uppercase;
   letter-spacing: 0.15rem;
   color: rgba(0, 255, 255, 0.511);
   font-size: 0.8rem;
 }
+
 ul {
   padding: 0;
   margin: 0;
   line-height: 2.5rem;
 }
+
 ul li {
   list-style: none;
 }
+
 a {
   color: aqua;
   text-decoration: none;
 }
+
 nav a:hover,
 footer a:hover {
   color: aquamarine;
   border-bottom: 2px solid orangered;
   padding-bottom: 0.3rem;
 }
+
 nav ul {
   display: flex;
   gap: 1rem;
 }
+
 figure {
   margin: 0;
   padding: 0;
 }
+
 footer {
   height: 20rem;
   display: flex;
@@ -123,12 +139,19 @@ footer {
 }
 
 /* specific classes BEM  --------------------------------------- */
+.container {
+  margin-top: 2.5rem;
+  display: flex;
+  flex-direction: column;
+}
+
 .container__top {
   display: flex;
   gap: 1.8rem;
   justify-content: space-between;
   align-items: end;
 }
+
 .container__top--left {
   width: 100%;
   height: 400px;
@@ -140,8 +163,7 @@ footer {
 }
 
 .container__contact {
-  margin-top: 2.5rem;
-  display: flex;
+  flex-direction: row;
   column-gap: 4.5rem;
   row-gap: 0.6em;
   flex-wrap: wrap;
@@ -150,21 +172,23 @@ footer {
   padding: 1.5rem;
   border-radius: 1rem;
 }
+
 .container__social {
-  margin-top: 2.5rem;
-  display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   gap: 3rem;
   justify-content: center;
 }
-.container__links ul {
+.container__links ul,
+.container__music ul {
   display: flex;
   flex-wrap: wrap;
   row-gap: 1rem;
   column-gap: 2rem;
 }
 
-.container__links li {
+.container__links li,
+.container__music li {
   width: fit-content;
   white-space: nowrap;
   padding: 0.3rem 0.6rem;
@@ -174,8 +198,9 @@ footer {
   color: orangered;
 }
 
-figcaption {
-  margin-top: 1rem;
+.container__music .list-music {
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 /* specific classes -------------------------------------------- */
@@ -185,6 +210,7 @@ figcaption {
   align-items: center;
   flex-wrap: wrap;
 }
+
 .list-hobbies li {
   border: 1px solid rgba(64, 224, 208, 0.138);
   padding: 0.1rem 0.6rem;
@@ -192,6 +218,7 @@ figcaption {
   width: max-content;
   background-color: rgba(55, 55, 55, 0.158);
 }
+
 .social-item a {
   display: flex;
   flex-direction: column;
@@ -204,6 +231,7 @@ figcaption {
 .social-item > a:hover > :first-child:not(:last-child) {
   filter: hue-rotate(0deg) saturate(10000%);
 }
+
 .social-item > a:hover > :last-child {
   filter: saturate(0) brightness(300%);
 }
@@ -215,6 +243,7 @@ figcaption {
   padding-top: 1.2rem;
   align-self: center;
 }
+
 .svg-social {
   width: 3rem;
   height: 3rem;
@@ -224,7 +253,6 @@ figcaption {
   width: 100%;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   gap: var(--main-gallery-gap-desktop);
   justify-content: center;
 }
@@ -241,9 +269,11 @@ figcaption {
 .gallery-wrapper img {
   max-width: 100%;
   height: auto;
+  object-fit: cover;
 }
 
-.list-links li {
+.list-links li,
+.list-music li {
   border: 1px solid rgba(64, 224, 208, 0.138);
   border-radius: 0.3rem;
   width: max-content;
@@ -273,15 +303,22 @@ footer {
     flex-direction: column-reverse;
     align-items: start;
   }
+
   main,
   header,
   footer {
     padding: 0 2rem 0 2rem;
   }
+
   .container__social .social-item {
     width: 100%;
   }
+
   .gallery-item {
     flex-basis: max-content;
+  }
+
+  .gallery-wrapper {
+    flex-wrap: wrap;
   }
 }
