--- a/css/style.css
+++ b/css/style.css
@@ -252,14 +252,10 @@ footer {
 }
 
 .gallery-wrapper {
-  width: 100%;
   display: flex;
   flex-direction: row;
   gap: var(--main-gallery-gap-desktop);
   justify-content: center;
-}
-
-.gallery-item {
   flex-basis: calc(
     (
         var(--main-layout-widh) - (2 * var(--main-layout-padding-desktop)) -
@@ -268,10 +264,26 @@ footer {
   );
 }
 
-.gallery-wrapper img {
-  max-width: 100%;
-  height: auto;
+.gallery-item {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin: 0 auto;
+  overflow: hidden;
+  width: 100%;
+}
+
+.gallery-item img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+  transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transform: scale(1.2);
+}
+
+.gallery-item:hover img {
+  transform: scale(1);
+  transform-origin: center;
 }
 
 .list-links li,
